--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,11 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  background-color: #43b97f;
+  color: #295943;
 }
 
 .active {
-  background-color: #43b97f;
+  color: #295943;
 }
 
 .select-id {
@@ -153,6 +153,7 @@ main .points {
   display: flex;
   justify-content: space-between;
   column-gap: 20px;
+  margin-bottom: 100px;
 }
 
 main .points .points-imgs {
@@ -191,26 +192,91 @@ main .points .points-imgs .points-img:nth-child(2) {
   padding: 10px;
 }
 
-.points-info{
+.points-info {
   display: flex;
   flex-wrap: wrap;
   row-gap: 20px;
   padding: 10px;
 }
 
-.points-info .info-item{
+.points-info .info-item {
   width: 50%;
 }
 
-.points-info .info-item p{
+.points-info .info-item p {
   font-weight: 400;
-font-size: 16px;
-color: #3D3E48;
+  font-size: 16px;
+  color: #3d3e48;
 }
 
-.points-info .info-item span{
+.points-info .info-item span {
   font-weight: 700;
-font-size: 27.65px;
-color: #295943;
-margin-bottom: 5px;
+  font-size: 27.65px;
+  color: #295943;
+  margin-bottom: 5px;
+}
+
+.discover-title {
+  font-weight: 700;
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #295943;
+  text-align: center;
+}
+
+.discover-title-main {
+  font-weight: 700;
+  font-size: 27.65px;
+  line-height: 120%;
+  color: #295943;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.discover-main-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  row-gap: 30px;
+}
+
+.discover-card {
+  padding: 10px;
+  padding-bottom: 20px;
+  background-color: #fff;
+  box-shadow: 1px 1px 15px #999999;
+  border-radius: 10px;
+}
+
+.card-img {
+  margin-bottom: 20px;
+}
+
+.card-title {
+  font-weight: 700;
+  font-size: 19.2px;
+  color: #3d3e48;
+  margin-bottom: 22px;
+}
+
+.card-info{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card-info p:first-child {
+  font-weight: 700;
+  font-size: 16px;
+  color: #295943;
+}
+
+.card-info p:last-child {
+  font-weight: 400;
+  font-size: 14px;
+  color: #3d3e48;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
 }
